@@ -38,6 +38,7 @@ Revision 0.2.7, released XX-09-2019
   X.509 Certificates
 - Added RFC8419 providing Edwards-Curve Digital Signature Algorithm
   (EdDSA) Signatures in the CMS
+- Added RFC8479 providing Storing Validation Parameters in PKCS#8
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
